--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,14 @@
     "name": "bb-studio/by-tpl",
     "description": "The ThinkPHP6 tpl Package",
     "license": "Apache-2.0",
+    "type": "library",
     "authors": [
         {
             "name": "BoyangLee",
             "email": "1401211620@qq.com"
         }
     ],
-    "require": {
-        "php": ">=7.1.0",
-        "topthink/framework": "^6.0",
-        "topthink/think-view": "^1.0",
-        "topthink/think-helper": "^3.0.0"
-    },
+    "require": {},
     "autoload": {
         "psr-4": {
             "think\\": "src/"
