--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "The ThinkPHP6 tpl Package",
     "license": "Apache-2.0",
     "type": "library",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "BoyangLee",
